# jobfetcher

./: .gitignore  README.md  backfill_dates.py  cookie_manager.py  enrich_jobs.py  extract_jobs_bb.py  extract_linkedin_jobs.py  gen_table.py  jd_fallback.py  jd_fallback2.py  jd_fetch.py  jobs.json  jobs_table.html  migrate_search_to_sqlite.py  migrate_to_sqlite.py  playwright_extractor.py  pyproject.toml  requirements.txt  run_pipeline.py  save_urls.py  scrape_all_jobs.py  scrape_linkedin_mcp.py  xcrawl_client.py
hooks/: post-commit
src/jobfetcher/: __init__.py
src/jobfetcher/api/: __init__.py
src/jobfetcher/cli/: __init__.py
src/jobfetcher/models/: __init__.py
src/jobfetcher/scrapers/: __init__.py  base.py  company_careers.py  linkedin.py  linkedin_with_fallback.py
src/jobfetcher/storage/: __init__.py
